# WebSocketMassenger

./: .gitignore  CMakeLists.txt  README.en.md  README.md  packages.txt
src/server/: config.cpp  config.h  logger.cpp  logger.h  main.cpp
src/tests/: test_config.cpp  test_logger.cpp
src/web/: client.html  index.html
src/web/css/: style.css
src/web/js/: config.js  messanger.js  messenger.js
